2012-01-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix signed comparison on gbz80.
	* device/lib/_memmove.c:
	  Fix comparison in pointer location for memmove().
	* src/z80/peeph-gbz80.def:
	  Enable some jump peepholes for gbz80.

2012-01-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix #3473876.
	* Changelog:
	  Pretend to live in the year 2012 to not cause suspicion.
	* device/lib/_memmove.c:
	  Simplified test deciding copy direction for memmove().
	* src/z80/peeph-gbz80.def:
	  Use gbz80-specific load-and-increment/decrement instructions.
	* src/z80/mappings.i:
	  Use more intuitive add sp, d syntax instead of lda sp, d(sp).

2012-01-15 Borut Razem <borut.razem AT gmail.com>

	* sdas/asrab/Makefile.in: fixed linking with -lm math library
	* src/SDCCnaddr.cc: removed unicode BOM
	* device/lib/pic14/configure.in, device/lib/pic14/configure,
	  device/lib/pic14/aclocal.m4: fixed transfer of gcc CFLAGS to
	  sdcc while generating dependencies

2012-01-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #3473863 in increment of pointers, fixed similar bug in equality comparison.
	* support/regression/tests/memory.c:
	  Enable a memchr() test.
	* support/regression/tests/bug2729218.c:
	  Move struct out of ROM for gbz80.

2012-01-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/main.c:
	  Remove unnecessary value calculation in _hasNativeMulFor().

2012-01-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/sdccman.lyx: bumped version to 3.1.2
	* src/SDCCicode.c (checkTypes): fixed bug 2942343
	* src/SDCCnaddr.cc: svn properties
	* src/SDCCnaddr.hpp: removed some typename keywords for MSVC,
	  fixed warning
	* src/src.vcxproj: added SDCCnaddr.*, added boost include path
	* src/z80/z80.vcxproj: upgraded boost include path
	* support/regression/tests/bug2942343.c: new, added

2012-01-11 Borut Razem <borut.razem AT gmail.com>
